app.css
* {
    margin: 0%;
    padding: 0%;
}

body {
    background-color: teal;
}

header {
    text-align: center;
    text-shadow: 1px 1px 20px white;
    background-image: url(image/banner2.jpg);
    background-size: cover;
}

section {
    background-color: white;
}

.image-box {
    margin: 1.5em;
    padding: 1.5em;
    background-color: lightgray;
    border: 1px solid black;
    box-shadow: 2px 2px 10px black;

}

img {
    display: block;
    max-width: 100%;
    box-shadow: 2px 2px 10px black;
    margin: auto;
}

figcaption {
    margin-top: .5em;
}

main {
    background-color: orange;
}

footer {
    background-color: magenta;
}

